infrastructure/kubernetes/manifests-yaml/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devopsify
  labels:
    name: devopsify
